--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,8 @@
 }
 
 #navbar__logo {
-    background-color: #66fcf1;
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
+    color: #0b0c10;
+    -webkit-text-stroke: 1px #66fcf1;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -82,13 +78,13 @@
     width: 100%;
     border: solid;
     outline: none;
-    border-radius: 4px;
+    border-radius: 10px;
     color: #66fcf1;
     transition: all 0.3s ease;
 }
 
 .navbar__links:hover {
-    color: #4c2c92;
+    color: #45a29e;
     transition: all 0.3s ease;
 }
 
@@ -214,7 +210,8 @@
 }
 
 .hero__heading span {
-    color: #66fcf1;
+    color: #0b0c10;
+    -webkit-text-stroke: 1px #66fcf1;
 }
 
 .hero__description {
@@ -243,7 +240,17 @@
     background-size: 40px 40px;
     background-image: radial-gradient(circle, #000000 1px, rgba(0, 0, 0, 0) 1px);
     padding: 10rem 0;
+    /* animation: rotation 8s infinite linear; */
 }
+  
+/* @keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  } */
 
 .main__container {
     display: grid;
@@ -276,18 +283,6 @@
     margin-bottom: 32px;
 }
 
-.main__content h2 {
-    font-size: 4rem;
-    background: #003973; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #003973, #e5e5be); 
-    background: linear-gradient(to right, #003973, #e5e5be);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent; 
-}
-
 .main__content p {
     margin-top: 1rem;
     font-size: 2rem;
@@ -318,7 +313,7 @@
     text-decoration: none;
     padding: 20px 60px;
     border: solid;
-    border-radius: 4px;
+    border-radius: 10px;
     margin-top: 2rem;
     cursor: pointer;
     position: relative;
@@ -490,26 +485,29 @@
     margin: 10px;
     height: 425px;
     width: 300px;
-    border-radius: 4px;
+    border-radius: 10px;
+    border: solid 4px;
+    border-color: #45a29e;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: #fff;
-    background-image: linear-gradient(to top, #fc3d21 0%, #0b3d91 100%);
+    color: #c5c6c7;
+    background-size: 100% 100%;
+    /* background-image: linear-gradient(to top, #fc3d21 0%, #0b3d91 100%); */
     transition: 0.3s ease-in;
 }
 
 .projects__card:nth-child(2) {
-    background: #ffd89b;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #19547b, #ffd89b);  
-    background: linear-gradient(to right, #19547b, #ffd89b); 
-
+    color: #0b0c10;
 }
 
 .projects__card:nth-child(3) {
-    background: #7474BF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #348AC7, #7474BF);
-    background: linear-gradient(to right, #348AC7, #7474BF);
+    background-size: 200px;
+    background-repeat: no-repeat;
+}
+
+.projects__card:nth-child(4) {
+    background-size: 100px;
 }
 
 .projects__card h2 {
@@ -563,6 +561,113 @@
     .projects__wrapper {
         grid-template-columns: 1fr;
     }
+}
+
+.form__control {
+    width:400px;
+    background: transparent;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #0b0c10;
+    color:#c5c6c7;
+    font-size: 18px;
+    margin-bottom: 16px;
+    margin-left: 50px;
+}
+
+.form__control__submit {
+    font-size: 1rem;
+    text-decoration: none;
+    padding: 20px 50px;
+    border: solid;
+    border-radius: 10px;
+    margin-top: 1rem;
+    cursor: pointer;
+    position: relative;
+    transition: all 0.35s;
+    outline: none;
+    color: #66f1fc;
+    background-color: #0b0c10;
+    margin-left: 8rem;
+    margin-bottom: 1rem;
+}
+
+.contact__form {
+    display: none;
+    position: fixed;
+    bottom: 50%;
+    right: 10rem;
+    border: 4px solid #66fcf1;
+    border-radius: 10px;
+    z-index: 9;
+    width: 500px;
+
+}
+
+.contact__form__container h1{
+    display: flex;
+    margin-bottom: 2rem;
+    color: #66fcf1;
+}
+
+.contact__form__container {
+    max-width: 500px;
+    background-color: #1f2833;
+}
+
+
+.close__contact {
+    background: transparent;
+    border: none;
+    outline: none;
+    margin-left: 300px;
+    color: #0b0c10;
+    margin-bottom: 50px;
+
+}
+
+.close__contact:hover {
+    cursor: pointer;
+}
+
+.top {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+    .form__control {
+        width:200px;
+    }
+    
+    .form__control__submit {
+        font-size: 0.75rem;
+        padding: 20px 40px;
+
+    }
+    
+    .contact__form {
+        width: 300px;
+        right: 2rem;
+        bottom: 2rem;
+    }
+    
+
+    .contact__form__container {
+        max-width: 300px;
+    }
+
+    .close__contact {
+        margin-left: 100px;
+    }
+
+    .form__control__submit {
+        margin-top: 1rem;
+        margin-left: 3.5rem;
+    }
+
 }
 
 
