--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bad+Script&family=Source+Sans+Pro&display=swap');
 
 *,
 *::after,
@@ -8,38 +8,55 @@
 
 :root {
     --clr-white-100: #F0F0F0;
+    --clr-selection: #BDB3A5;
+    --clr-background: #BDB3A5;
     --clr-brown-400: #C39F68;
     --clr-black-800: #0D0D0F;
 
     --ff--primary: 'Bad Script', cursive;
-    --ff-accent: 'Roboto Mono', monospace;
+    --ff-accent: 'Source Sans Pro', sans-serif;
 ;
 }
 
 h1, 
 h2, 
 h3,
+h4,
 p,
-body {
+body,
+html {
     padding: 0;
+    margin: 0;
+}
+
+ul {
     margin: 0;
 }
 
 body {
     position: relative;
     font-weight: 400;
-    font-family: var(--ff--primary);
     font-size: 1.3125rem;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
+    width: 100%;
     background-color: var(--clr-white-100);
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: var(--ff--primary);
+    font-weight: 900;
 }
 
 h1,
 h2 {
     line-height: 1;
-    font-family: var(--ff--primary);
-    font-weight: 900;
+}
+
+::selection {
+    background-color: var(--clr-selection);
 }
 
 /*Navigation*/
@@ -50,11 +67,12 @@ h2 {
     align-items: center;
     gap: 0.5em;
     padding: 0.5em 0;
+    font-family: var(--ff--primary);
 }
 
 .navigation a {
     position: relative;
-    font-size: clamp(0.70rem, 2vw, 1.5rem);
+    font-size: clamp(0.70rem, 4vw, 1.5rem);
     text-align: center;
     width: max-content;
     color: var(--clr-black-800);
@@ -92,9 +110,10 @@ h2 {
     align-items: center;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
-img {
+.hero img {
     position: absolute;
     width: min(60%, 25rem);
 }
@@ -110,10 +129,6 @@ img {
     right: 20px;
 }
 
-.bush_one {
-    left: -50;
-}
-
 @keyframes float {
     to {
         transform: translateY(15px);
@@ -123,11 +138,11 @@ img {
 .shadow {
     width: 10em;
     position: relative;
-    bottom: -100px;
-    left: 15px;
+    bottom: 0px;
+    margin-left: 1em;
     z-index: -10;
     transform: scale(1.2);
-    animation: shadowGrow 2s ease-in-out alternate-reverse infinite;
+    animation: shadowGrow 2s ease-in-out alternate infinite;
 }
 
 @keyframes shadowGrow {
@@ -136,11 +151,14 @@ img {
     }
 }
 
+h1 {
+    backface-visibility: hidden;
+}
+
 .type {
     position: relative;
     font-size: clamp(1rem, 8vw, 8rem);
-    animation: float 2s ease-in-out alternate-reverse infinite;
-    border-bottom: 2px solid var(--clr-black-800);
+    animation: float 2s ease-in-out alternate infinite;
     width: max-content;
     padding: 1em 1em 0 1em;
     z-index: -11;
@@ -182,23 +200,299 @@ img {
     }
 }
 
+/*About*/
+
+.about {
+    position: relative;
+    display: flex;
+    margin-bottom: 2em;
+}
+
+.container {
+    flex-basis: 100%;
+    background-color: #619161;
+    border-radius: 0.5em;
+    word-wrap: normal;
+    margin: 1em;
+    padding: 0 1em 1em 1em;
+}
+
+.container ul {
+    margin-top: 1em;
+    padding: 0;
+}
+
+.container li {
+    list-style: none;
+    margin-top: 0.5em;
+    border: 1px solid var(--clr-black-800);
+}
+
+.info {
+    margin-top: 1em;
+}
+
+.sub {
+    font-size: 0.75em;
+    margin-left: 4em;
+}
+
+.branch {
+    position: absolute;
+    width: min(40%, 20em);
+    right: 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 650px;
+}
+
+.content .branch {
+    transform: rotateY(180deg);
+    left: 10px;
+    bottom: 45px;
+}
+
+.project {
+    text-align: center;
+    margin-top: 1em;
+    width: min(90%, 70rem);
+    height: max-content;
+}
+
+.project h3 {
+    font-size: clamp(0.75rem, 5vw, 1.5rem);
+    background-color: var(--clr-background);
+    border-radius: 0.5em;
+}
+
+.project h3:hover {
+    cursor: pointer;
+}
+
+.overflow-hide {
+    overflow: hidden;
+}
+
+.project-info {
+    display: none;
+    margin-inline: auto;
+    width: min(80%, 70rem);
+    background-color: var(--clr-brown-400);
+    border: 1px dashed var(--clr-black-800);
+    border-radius: 0.5em;
+    transform: translateY(-300px);
+    animation: slideDown 1s ease-in-out forwards;
+    font-size: clamp(0.75rem, 5vw, 1.2rem);
+}
+
+.project-info a {
+    color: #4A5541;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.columns {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: max-content;
+    margin-top: 1em;
+}
+
+.columns > * {
+    flex-basis: 100%;
+}
+
+.project li{
+    text-align: left;
+}
+
+.project-images {
+    display: grid;
+    place-content: center;
+}
+
+.project-img {
+    width: 200px;
+    margin-bottom: 1em;
+    border: 1px solid var(--clr-black-800);
+}
+
+.project:hover > .overflow-hide > .project-info {
+    display: block;
+}
+
+@keyframes slideDown {
+    to {
+        transform: translateY(0);
+    }
+}
+
+/*Media for About*/
+
+@media screen and (max-width: 1680px) {
+    .about {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 1350px) {
+    .branch {
+        display: none;
+    }
+
+    .content {
+        height: 780px;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .columns {
+        flex-direction: column;
+    }
+
+    .project-images {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .content {
+        height: 850px;
+    }
+
+}
+
+@media screen and (max-width: 350px) {
+    .content {
+        height: 780px;
+    }
+}
+
+/*Skills*/
+
+.bg-mountains {
+    position: absolute;
+    inset: 0;
+    background: url(assets/skills-bg.jpg);
+    background-size: cover;
+}
+
+.chess-container {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-content: center;
+}
+
+.chessboard {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    border: 2px solid var(--clr-black-800);
+    border-radius: 0.25em;
+    height: 800px;
+    width: 800px;
+    overflow: hidden;
+}
+
+.tile{
+    display: grid;
+    place-content: center;
+    height: 100px;
+    width: 100px;
+}
+
+.white {
+    background-color: rgba(255, 255, 255, .4);
+}
+
+.black {
+    background-color: rgba(0 ,0 , 0, .6);
+}
+
+i {
+    font-size: 3em
+}
+
+i:hover {
+    cursor: grab;
+}
+
+.hide {
+    transition: all 0.02s;
+    opacity: 0;
+}
+
+.valid {
+    background-color: rgba(255, 0, 0, .5);
+}
+
 /*Footer*/
 
-footer {
+.footer {
     position: absolute;
-    bottom: 5px;
+    display: flex;
+    bottom: 15px;
     width: 100%;
-    height: 40px
+    height: 40px;
+    z-index: 100;
 }
 
-footer img {
+.footer a {
+    display: grid;
+    place-content: center;
+}
+
+.footer img {
     margin-left: 1em;
+    width: 30px;
+    height: 30px;
 }
 
-footer p {
-    font-weight: bolder;
+.footer img:hover {
+    cursor: pointer;
+}
+
+.resume {
+    position: absolute;
     margin-right: 1em;
-    float: right;
+    right: 0;
+    text-decoration: none;
+}
+
+.footer p {
+    position: relative;
+    font-weight: bolder;
+    font-family: var(--ff--primary);
+    color: var(--clr-black-800);
+    padding: 0 0.1em;
+}
+
+.footer p:hover {
+    cursor: pointer;
+}
+
+.footer p::after {
+    position: absolute;
+    content: '';
+    inset: 0;
+    width: 0;
+    height: 100%;
+    transition: all 0.35s;
+    background-color: var(--clr-brown-400);
+    border-radius: 0.5em;
+    z-index: -1;
+}
+
+.footer p:hover::after {
+    width: 100%;
 }
 
 
